<resources>
    <string name="app_name">NermaxCooking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Authorization_ru">Авторизация</string>
    <string name="Email_ru">Почта</string>
    <string name="Password_ru">Пароль</string>
    <string name="Enter_ru">ВОЙТИ</string>
    <string name="Registration_ru">Регистрация</string>
    <string name="Lastname_ru">Фамилия</string>
    <string name="Name_ru">Имя</string>
    <string name="Patronymic_ru">Отчество</string>
    <string name="Birthdate_ru">Дата рождения</string>
    <string name="CreatePassword_ru">Придумайте пароль</string>
    <string name="RepeatPassword_ru">Повторите пароль</string>
    <string name="Create_ru">Создать</string>
    <string name="CheckEmail_ru">ПРОВЕРИТЬ</string>
    <string name="Settings_ru">Настройки</string>
    <string name="ToRegist_ru">Зарегистрироваться</string>
    <string name="Profile_ru">Профиль</string>
    <string name="Messages_ru">Сообщения</string>
    <string name="Recipes_ru">Рецепты</string>
    <string name="Search_ru">Поиск</string>
    <string name="Main_ru">Главная</string>
    <string name="YouDoNotAuthorized_ru">Вы не авторизованы!</string>
    <string name="BestRecipes_ru">Лучшие рецепты</string>
    <string name="CreateRecipe_ru">Создать рецепт</string>
    <string name="WriteName_ru">Напишите название</string>
    <string name="isReady_ru">ГОТОВО</string>
    <string name="AddIngredients_ru">Добавьте необходимые ингредиенты</string>
    <string name="WriteIngredient_ru">Напишите ингредиент</string>
    <string name="ShortGrams_ru">гр.</string>
    <string name="AddIngredient_ru">Добавить ингредиент</string>
    <string name="EnterCookingTime_ru">Введите время приготовления (мин):</string>
    <string name="AddDescription_ru">Добавьте описание</string>
    <string name="GramsShort_ru">гр.</string>
    <string name="Weight_ru">Вес</string>
    <string name="Calories_ru">Калорийность</string>
    <string name="Proteins_ru">Белки</string>
    <string name="Fats_ru">Жиры</string>
    <string name="Carbohydrates_ru">Углеводы</string>
    <string name="ForHundredGramsOfProduct_ru">На 100 грамм продукта</string>
    <string name="Filters_ru">Фильтры</string>
    <string name="Sorting_ru">Сортировка</string>
    <string name="Composition_ru">Состав</string>
    <string name="ToSort_ru">Сортировать...</string>
    <string name="SortUpCalories_ru">по возрастанию калорийности</string>
    <string name="SortDownCalories_ru">по убыванию калорийности</string>
    <string name="SortUpProteins_ru">по возрастанию белков</string>
    <string name="SortDownProteins_ru">по убыванию белков</string>
    <string name="SortUpFats_ru">по возрастанию жиров</string>
    <string name="SortDownFats_ru">по убыванию жиров</string>
    <string name="SortUpCarbohydrates_ru">по возрастанию углеводов</string>
    <string name="SortDownCarbohydrates_ru">по убыванию углеводов</string>
    <string name="SortUpCookingTime_ru">по возрастанию времени приготовления</string>
    <string name="SortDownCookingTime_ru">по убыванию времени приготовления</string>
    <string name="ChooseFilter_ru">Выберите фильтр</string>
    <string name="ApplyFilter_ru">Применить фильтр</string>
    <string name="EnterRecipeName_ru">Введите название рецепта</string>
    <string name="Delete_ru">Удалить</string>
    <string name="MyRecipes_ru">Мои рецепты</string>
    <string name="Add_ru">Добавить</string>
    <string name="SaveChanges_ru">Сохранить изменения</string>
    <string name="Save_ru">Сохранить</string>
    <string name="Description_ru">Описание</string>
    <string name="CookingTime_ru">Время приготовления (мин.)</string>
</resources>