<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:menuCategory="secondary"
        android:title="@string/Main_ru" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:menuCategory="secondary"
        android:title="@string/Search_ru" />
    <item
        android:id="@+id/recipesFragment"
        android:icon="@drawable/ic_book"
        android:menuCategory="secondary"
        android:title="@string/Recipes_ru" />
    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_messages"
        android:menuCategory="secondary"
        android:title="@string/Messages_ru" />
    <item
        android:id="@+id/userFragment"
        android:icon="@drawable/ic_user"
        android:menuCategory="secondary"
        android:title="@string/Profile_ru" />
</menu>