<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentRecipeSorting"

    >

    <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    app:layout_collapseMode="pin"
    app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:onClick="onClick"
                android:background="@color/yellowBanana"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:id="@+id/filter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/ToSort_ru"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
    <RadioButton
        android:id="@+id/SortUpCalories"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:text="@string/SortUpCalories_ru"
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:onClick="onClick"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />
    <RadioButton
        android:id="@+id/SortDownCalories"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:text="@string/SortDownCalories_ru"
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:textAllCaps="false"
        android:onClick="onClick"
        app:layout_constraintTop_toBottomOf="@id/SortUpCalories"
        />
    <RadioButton
        android:id="@+id/SortUpProteins"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:text="@string/SortUpProteins_ru"
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:textAllCaps="false"
        android:onClick="onClick"
        app:layout_constraintTop_toBottomOf="@id/SortDownCalories"
        />
    <RadioButton
        android:id="@+id/SortDownProteins"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:text="@string/SortDownProteins_ru"
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:textAllCaps="false"
        android:onClick="onClick"
        app:layout_constraintTop_toBottomOf="@id/SortUpProteins"
        />
    <RadioButton
        android:id="@+id/SortUpFats"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:text="@string/SortUpFats_ru"
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:textAllCaps="false"
        android:onClick="onClick"
        app:layout_constraintTop_toBottomOf="@id/SortDownProteins"
        />
        <RadioButton
            android:id="@+id/SortDownFats"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:text="@string/SortDownFats_ru"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textAllCaps="false"
            android:onClick="onClick"
            app:layout_constraintTop_toBottomOf="@id/SortUpFats"
            />
        <RadioButton
            android:id="@+id/SortUpCarbohydrates"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:text="@string/SortUpCarbohydrates_ru"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textAllCaps="false"
            android:onClick="onClick"
            app:layout_constraintTop_toBottomOf="@id/SortDownFats"
            />
        <RadioButton
            android:id="@+id/SortDownCarbohydrates"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:text="@string/SortDownCarbohydrates_ru"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textAllCaps="false"
            android:onClick="onClick"
            app:layout_constraintTop_toBottomOf="@id/SortUpCarbohydrates"
            />
        <RadioButton
            android:id="@+id/SortUpCookingTime"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:text="@string/SortUpCookingTime_ru"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textAllCaps="false"
            android:onClick="onClick"
            app:layout_constraintTop_toBottomOf="@id/SortDownCarbohydrates"
            />
        <RadioButton
            android:id="@+id/SortDownCookingTime"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:text="@string/SortDownCookingTime_ru"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textAllCaps="false"
            android:onClick="onClick"
            app:layout_constraintTop_toBottomOf="@id/SortUpCookingTime"
            />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>

