<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRegistration"
    >


    <TextView
        android:id="@+id/Registration"
        style="@style/MyTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Registration_ru"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CreatePassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:hint="@string/CreatePassword_ru"
        android:inputType="textPassword"
        android:maxLength="30"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Registration" />

    <EditText
        android:id="@+id/RepeatPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/RepeatPassword_ru"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CreatePassword"
        app:layout_constraintBottom_toTopOf="@id/Lastname"/>

    <EditText
        android:id="@+id/Lastname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/Lastname_ru"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RepeatPassword"
        app:layout_constraintBottom_toTopOf="@id/Name"/>

    <EditText
        android:id="@+id/Name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/Name_ru"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Lastname"
        app:layout_constraintBottom_toTopOf="@id/Patronymic"/>

    <EditText
        android:id="@+id/Patronymic"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/Patronymic_ru"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Name"/>

    <!--<EditText
        android:id="@+id/Birthdate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/Birthdate_ru"
        android:textSize="20sp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@id/CreateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Patronymic" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@id/Birthdate"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintLeft_toRightOf="@id/Birthdate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Birthdate"
         />-->

    <Button
        android:id="@+id/CreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/lightGoldenYellow"
        android:text="@string/Create_ru"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Patronymic"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
