<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentChooseFilter"
    >


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_arrow_left"
                android:layout_gravity="center_vertical"
                android:background="@color/yellowBanana"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/filter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/ChooseFilter_ru"
                android:textColor="@color/black"
                android:textSize="18sp"
                />

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="70dp"
                android:background="@color/yellowBanana"
                android:text="Сбросить"
                android:textAllCaps="false"
                android:textSize="17sp" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/caloriesBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="64dp"
        android:background="@color/yellowBanana"
        android:text="@string/Calories_ru"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/caloriesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/caloriesBtn"
        app:layout_constraintLeft_toRightOf="@id/caloriesBtn"
        app:layout_constraintTop_toTopOf="@id/caloriesBtn"
        />

    <Button
        android:id="@+id/proteinsBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="4dp"
        android:background="@color/yellowBanana"
        android:text="@string/Proteins_ru"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caloriesBtn" />

    <TextView
        android:id="@+id/proteinsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/proteinsBtn"
        app:layout_constraintTop_toTopOf="@id/proteinsBtn"
        app:layout_constraintLeft_toRightOf="@id/proteinsBtn"/>

    <Button
        android:id="@+id/fatsBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="4dp"
        android:background="@color/yellowBanana"
        android:text="@string/Fats_ru"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proteinsBtn" />

    <TextView
        android:id="@+id/fatsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/fatsBtn"
        app:layout_constraintTop_toTopOf="@id/fatsBtn"
        app:layout_constraintLeft_toRightOf="@id/fatsBtn"/>


    <Button
        android:id="@+id/carbohydratesBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="4dp"
        android:background="@color/yellowBanana"
        android:text="@string/Carbohydrates_ru"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fatsBtn" />

    <TextView
        android:id="@+id/carbohydratesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/carbohydratesBtn"
        app:layout_constraintTop_toTopOf="@id/carbohydratesBtn"
        app:layout_constraintLeft_toRightOf="@id/carbohydratesBtn"/>

    <Button
        android:id="@+id/applyFilters"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@color/yellowBanana"
        android:text="@string/ApplyFilter_ru"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>