<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentUser"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:src="@drawable/ic_exit"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="306dp"
        android:layout_height="450dp"
        android:background="@drawable/recipe_card"
        android:backgroundTint="@color/yellowBanana"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="444dp"
        android:background="@drawable/recipe_card"
        android:backgroundTint="@color/lightGoldenYellow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/Email_ru"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailTV1"
            style="undeh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:text="@string/Email_ru"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/emailTV"
            app:layout_constraintLeft_toRightOf="@id/emailTV"
            app:layout_constraintTop_toTopOf="@id/emailTV"
            app:layout_constraintVertical_bias="0.571" />

        <TextView
            android:id="@+id/lastnameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/Lastname_ru"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTV" />

        <EditText
            android:id="@+id/lastnameTV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lastname_ru"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/lastnameTV"
            app:layout_constraintLeft_toLeftOf="@id/emailTV1"
            app:layout_constraintTop_toTopOf="@id/lastnameTV"
            app:layout_constraintVertical_bias="0.523" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/Name_ru"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastnameTV" />

        <EditText
            android:id="@+id/nameTV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name_ru"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/nameTV"
            app:layout_constraintLeft_toLeftOf="@id/lastnameTV1"
            app:layout_constraintTop_toTopOf="@id/nameTV"
            app:layout_constraintVertical_bias="0.523" />

        <TextView
            android:id="@+id/patronymicTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/Patronymic_ru"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTV" />

        <EditText
            android:id="@+id/patronymicTV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Patronymic_ru"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/patronymicTV"
            app:layout_constraintLeft_toLeftOf="@id/nameTV1"
            app:layout_constraintTop_toTopOf="@id/patronymicTV"
            app:layout_constraintVertical_bias="0.571" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/recipe_card"
            android:text="@string/Save_ru"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>